Change log next version
-----------------------
It's now possible to verify private final overloaded methods in the Mockito Extension API. For example:
    verifyPrivate(tested).invoke(method(MyClass.class, "myOverloadedMethodName", String.class, String.class)).withArguments(anyString(), captor.capture());

Change log 1.5.6 (2014-09-04)
-----------------------------
* Changed so that the MockClassLoader throws ClassNotFoundException instead of Javassist's NotFoundException when a class isn't found (thanks to Mikael Petterson for the pull request).
* Final equals methods should now work with Mockito and not cause stackoverflow (thanks to Peer Hartmann for pull request)
* Removed redundant cast when creating a class replicas for final system classes.
* Cleaned up some code in the ClassReplicaCreator class
* Added support for answers, name and extract interfaces in PowerMockito when using annotations (@Mock). Note that answers doesn't work for final classes or methods! (issue 486).
* PowerMockIgnore is now taken into account when using the Java Agent PowerMockRule.
* Improved java agent automatic bootstrap mechanism to work better for newer JDK's.
* PowerMock now finds default methods in Java 8 (issue 513).
* Annotations such as @Mock and @InjectMocks can now be used with the JUnit Java Agent.
* Proxy framework is loaded from the the JUnit Java Agent which means that all Whitebox methods work as expected.

Change log 1.5.5 (2014-05-28)
-----------------------------
* Updated OSGi metadata
* MockClassLoader.getResources no longer loads same file twice (thanks to Kelsey Rider for the patch)
* Added getResourceAsStream and getResource to DeferSupportingClassLoader which defers loading to the deferring classloader.
* Added ability to adjust the classpath when running the a test using the @UseClassPathAdjuster annotation. This is useful when integrating PowerMock with certain third-party JUnit runners (thanks to Jonas Berlin for the patch).