@@ -18,16 +18,13 @@ package org.powermock.api.mockito.internal.mockcreation;
 import org.mockito.MockSettings;
 import org.mockito.Mockito;
 import org.mockito.internal.InternalMockHandler;
-import org.mockito.internal.configuration.GlobalConfiguration;
 import org.mockito.internal.creation.MethodInterceptorFilter;
 import org.mockito.internal.creation.MockSettingsImpl;
 import org.mockito.internal.creation.jmock.ClassImposterizer;
 import org.mockito.internal.handler.MockHandlerFactory;
-import org.mockito.internal.progress.ThreadSafeMockingProgress;
 import org.mockito.internal.util.MockNameImpl;
 import org.mockito.internal.util.reflection.LenientCopyTool;
 import org.powermock.api.mockito.internal.invocation.MockitoMethodInvocationControl;
-import org.powermock.api.support.ClassLoaderUtil;
 import org.powermock.core.ClassReplicaCreator;
 import org.powermock.core.DefaultFieldValueGenerator;
 import org.powermock.core.MockRepository;
@@ -105,9 +102,10 @@ public class MockCreator {
         }
 
         settings.setMockName(new MockNameImpl(mockName));
+        settings.setTypeToMock(type);
+
         InternalMockHandler mockHandler = new MockHandlerFactory().create(settings);
-        MethodInterceptorFilter filter = new PowerMockMethodInterceptorFilter(
-                mockHandler, settings);
+        MethodInterceptorFilter filter = new PowerMockMethodInterceptorFilter(mockHandler, settings);
         final T mock = (T) ClassImposterizer.INSTANCE.imposterise(filter, type);
         final MockitoMethodInvocationControl invocationControl = new MockitoMethodInvocationControl(filter,
                 isSpy && delegator == null ? new Object() : delegator, mock, methods);
